--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@
 
         </div>
       </section>
+
+      <section class="section-tours">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            Most popular tours
+          </h2>
+        </div>
+      </section>
     </main>
 
     <!-- 
