--- a/index.html
+++ b/index.html
@@ -214,6 +214,26 @@
         </div>
 
       </section>
+
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">
+            We make people genuinely happy
+          </h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="img/nat-8.jpg" alt="Person on a tour">
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, quod quo neque accusamus laudantium magni et repellat consectetur, nisi explicabo tempora odit similique consequuntur culpa optio, quod quo neque accus repellendus placeat ut numquam dicta!</p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!-- 
