--- a/index.html
+++ b/index.html
@@ -216,6 +216,14 @@
       </section>
 
       <section class="section-stories">
+        <div class="bg-video">
+          <video class="bg-video__content" autoplay muted loop>
+            <source src="img/video.mp4" type="video/mp4"/>        
+            <source src="img/video.webm" type="video/webm"/>
+            Your browser is not supported!      
+          </video>
+        </div>
+
         <div class="u-center-text u-margin-bottom-big">
           <h2 class="heading-secondary">
             We make people genuinely happy
@@ -226,6 +234,7 @@
           <div class="story">
             <figure class="story__shape">
               <img class="story__img" src="img/nat-8.jpg" alt="Person on a tour">
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">I had the best week ever with my family</h3>
@@ -233,6 +242,24 @@
             </div>
           </div>
         </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img class="story__img" src="img/nat-9.jpg" alt="Person on a tour">
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">WOW! My life is completely different now!</h3>
+              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, quod quo neque accusamus laudantium magni et repellat consectetur, nisi explicabo tempora odit similique consequuntur culpa optio, quod quo neque accus repellendus placeat ut numquam dicta!</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
+        </div>
+
       </section>
     </main>
 
