--- a/index.html
+++ b/index.html
@@ -349,7 +349,7 @@
         </div>
         <div class="col-1-of-2">
           <p class="footer__copyright">
-            Built my <a href="#" class="footer__link">Jan Novak</a> as a project.
+            Built by <a href="#" class="footer__link">Jan Novak</a> as a project.
           </p>
         </div>
       </div>
