--- a/index.html
+++ b/index.html
@@ -355,6 +355,23 @@
       </div>
     </footer>
 
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>  
+          <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Optio, quod quo neque accusamus laudantium magni et repellat consectetur, nisi explicabo tempora odit similique consequuntur culpa optio, quod quo nequtur adipisicing elit. Quas, molestias? Odit sed incidunt dicta cum voluptas dolore iste voluptatum, quis ea odio corporis optio sunt enim accusamus at sequi voluptatem! Optio, quod mus laudantium magni et repellat consectetur, nisi explicabo tempora odit similique consequuntur culpa optio, quod quo neque accus repelle. Optio, quod quo neque accusamus laudantium magni et repellat consectetur, nisi explicabo tempora odit similique consequuntur culpa optio, quod quo neque accus repellendus placeat ut numquam dictator Sun Ti al to Pur. Star Wars Obi Jan Novak je jedi a sith at the same time. Coruscant hori. 
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
+
     <!-- 
     <section class="grid-test">
       <div class="row">
